--- a/public/css/user-profile.css
+++ b/public/css/user-profile.css
@@ -68,7 +68,7 @@ body{
     border-bottom:2px solid #0062cc;
 }
 .profile-work{
-    padding: 14%;
+   // padding: 14%;
     margin-top: -15%;
 }
 .profile-work p{
