--- a/public/css/user-profile.css
+++ b/public/css/user-profile.css
@@ -1,6 +1,13 @@
 body{
     background: -webkit-linear-gradient(left, #3931af, #00c6ff);
 }
+.emp-profile{
+    padding: 3%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border-radius: 0.5rem;
+    background: #fff;
+}
 
 .profile-img{
     text-align: center;
