--- a/public/css/user-profile.css
+++ b/public/css/user-profile.css
@@ -101,3 +101,21 @@ body{
   height: 40px;
  
 }
+
+.viewLabel2{
+  margin-left: 10px;
+  height: 40px;
+ 
+}
+
+.viewLabel3{
+  color: #3c8dbc;
+ 
+}
+.textarea{
+     height: 200px;
+    width: 100%;
+   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+}
