--- a/public/css/blue.css
+++ b/public/css/blue.css
@@ -492,3 +492,9 @@
 .mx-auto {
   margin-left: auto !important;
 }
+
+.text-truncate{
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap
+}
